1. Vue's performance metrics are gradually starting to overtake React

--- a/article/other/开发和设计之间的鸿沟.md
+++ b/article/other/开发和设计之间的鸿沟.md
@@ -1,4 +1,23 @@
 # 开发和设计之间的鸿沟
+Web设计师 和 Web开发者 常常出现看法不一致的情况，他们往往有不一致的目标，从而对产品产生不同的影响。一些 设计工程师（Design Engineer） 称之为 鸿沟（gap）。  
+做一个 优秀的设计师 或 优秀的开发者 固然很好，但并不能真正的填补 鸿沟（gap）。设计师 学习编程 或 开发者 学习设计 其实也没什么帮助。那么，到底什么是 鸿沟（gap）呢？  
+**我们来举个例子吧**  
+一位设计师 指着屏幕，他想将页面上的 header 调到特定大小。… 开发者回头看看屏幕，给 header 调了个大小。  
+设计师尖叫起来。没让你调所有的 header！而且为啥字体也变了？  
+开发者 向 设计师 解释：只要调一个 header ，就相当于调整所有 header，如果想要破例搞个特殊的 header，他们得提前告知到底改哪个。另外，自己没有对字体做任何修改：“看上去和以前一样啊。”   
+设计师：好吧，那我们想要个 不一样的 header，再把字体的问题修复了。
+开发者：所以，你想 搞出两个 header，再修复一个我们看不到的 bug？  
+他们两方都在谈论同一件事，而且似乎也理解对方的要求；但由于他们对事情的认知来自不同的语境，所以他们对自己的结论总是没有自信。鬼知道，随着挫败感的日益增长，他们怎么才能在没有 技术负债 和 设计负债 的前提下，顺畅的提交设计 和 代码。  
+不管 设计师 和 开发者 从属与不同的团队，还是 在相同的多功能团队中 协作，其实都是一样的。每个学科都拥有自己的一套语言，因此，不同学科的 叙事方式 也会有所不同。我们需要通过一种共同的结构化方法 来 对齐我们的想法、思考 和 目标 。通常，在这方面单靠自己很难。  
+**从 产品概念 到 交付最终用户**  
+从战略目标出发，经由设计，交付一个能够在团队共用 且 可以预期的结果 给用户是非常复杂的，而且这附加了很多产品管理的工作，已经远远超出了 UX 本身的范畴。这就是为什么会出现 DesignOps，它试图结合更广泛的商业目标 使得 设计师 也能参与解决这类难题。  
+开发者通过编写代码来为用户提供产品功能。你应该能理解，开发，和设计一样，是很大的一个话题，它涵盖了太多的学科。近年来，开发自动化 对 缩减研发周期 起到了关键作用，我们能够更快的将新特性呈现给用户。DevOps 使得这些成为了可能，并且毫无疑问，在任何一个现代软件的发布流程中，它都是不可或缺的一环。  
+**填平这条 鸿沟（gap）**  
+将 DesignOps 和 DevOps 交叉起来，并确保它们之间流畅的进行协作。但遗憾的是，扩展知识的边界用处不大，因为不同学科的语言之间并没有相互转换，叙事方式也没有改变。    
+引入 设计工程师（Design Engineer）。他们能够理解如何将 设计师 的产出 代码化、标准化 甚至 给出自动化解决方案。产出 解决了问题 且 具备部署能力 的 代码解决方案。两个职业都具备创造性，都想要支持最终的用户。设计工程师 这个职位 同样具备创造性，他也会编写代码，但特殊的地方在于，他会系统的将 设计 以一种结构化的方式 转化为 目标实现。  
+
+
+
 
 参考:
 [The Gap — 开发和设计之间的鸿沟](https://mp.weixin.qq.com/s/FQeq_3tvZpvqP29cRjPXbg)
