--- a/article/css/字体定义原理.md
+++ b/article/css/字体定义原理.md
@@ -1,4 +1,153 @@
 # 字体定义原理
+现代网站在对网站整体进行字体定义的时候，大致都会遵循这样一个顺序：  
+``` 
+{
+  font-family: 
+    system-ui, -apple-system, BlinkMacSystemFont, segoe ui, Roboto,
+    Helvetica, Arial,
+    sans-serif;
+}
+```
+
+**衬线字体与非衬线字体**  
+- 衬线字体（英文为 serif）：意为有衬线的字体，衬线的意思是在字符笔画末端有叫做衬线的小细节的额外装饰，而且笔画的粗细会有所不同，这些细节在大写字母中特别明显
+- 非衬线字体（英文为 sans-serif）：sans 的意思是无，sans-serif 也就是无衬线的意思。专指西文中没有衬线的字体，与汉字字体中的黑体相对应。与衬线字体相反，该类字体通常是机械的和统一线条的，它们往往拥有相同的曲率，笔直的线条，锐利的转角
+
+## font-family 关键字
+对于 CSS 中的 font-family 而言，它有两类取值。  
+1. 一类是类似这样的具体的字体族名定义：font-family: Arial 这里定义了一个具体的字体样式，字体族名为 Arial
+2. 一类是通用字体族名，它是一种备选机制，用于在指定的字体不可用时给出较好的字体，类似这样：font-family: sans-serif
+
+其中，sans-serif 表无衬线字体族，例如， "Open Sans", "Arial" "微软雅黑" 等等。  
+通用字体族名，在 CSS Fonts Module Level 3 -- Basic Font Properties中，定义了 5 个，也就是我们熟知的几个通用字体族名：  
+1. serif 衬线字体族
+2. sans-serif 非衬线字体族
+3. monospace 等宽字体，即字体中每个字宽度相同
+4. cursive 草书字体
+5. fantasy 主要是那些具有特殊艺术效果的字体
+
+**新增通用字体族关键字**  
+CSS Fonts Module Level 4 -- Generic font families中，新增了几个关键字：  
+- system-ui 系统默认字体
+- emoji 用于兼容 emoji 表情符号字符
+- math 适用于数学表达式
+- fangsong 此字体系列用于中文的（仿宋）字体
+
+在字体定义中，除了给 font-family 赋予一个具体字体家族，譬如 font-family: Arial，其实还有 9 个字体关键字可以用，它们不具体代表某一个字体家族，而是表示了具体某一类或者具有某些特定的字体选取功能  
+_font-family: serif 衬线字体族,它表示所有衬线字体族的集合_  
+_font-family: sans-serif 非衬线字体族,表示所有非衬线字体族的集合_  
+_font-family: monospace 等宽字体,即字体中每个字宽度相同_  
+这系列字体程序员们其实都不陌生。我们用来敲代码的编辑器，字体的选择经常就是一类等宽字体。  
+等宽字体是指字符宽度相同的电脑字体，常见于 IDE 或者编辑器中，每个字母的宽度相等，通常用于计算机相关书籍中排版代码块。  
+_font-family: cursive 草书字体 与 font-family: fantasy 艺术效果的字体,fantasy和 cuisive 字体在浏览器中不常用，在各个浏览器中有明显的差异_   
+_font-family: system-ui 系统默认字体_  
+**这是新字体规范中，最重要的更新！也是目前字体定义中出现最多的字体关键字。**
+font-family: system-ui 的目的就是在不同的操作系统的 Web 页面下，自动选择本操作系统下的默认系统字体  
+默认使用特定操作系统的系统字体可以提高性能，因为浏览器或者 webview 不必去下载任何字体文件，而是使用已有的字体文件。font-family: system-ui 字体设置的优势之处在于它与当前操作系统使用的字体相匹配，对于文本内容而言，它可以得到最恰当的展示。  
+
+_font-family: emoji, math, fangsong，运用在一些比较特殊的场景，实际中使用非常少_  
+
+**字体的 fallback 机制**  
+不同操作系统、不同设备上安装和使用的字体都是不一样的。这同时引出了字体非常重要的一个机制 -- 字体的 fallback 机制  
+fallback 机制：在操作系统介面和网页等现代排版环境下，如果指定用字体A来显示某字符x但该字体并不支持这个字符（甚至该字体当前不可用），排版引擎通常不会直接放弃，它会根据一个预先记好的列表来尝试寻找能显示字符x的字体，如果找到字体B能行，那就用字体B来显示字符x。字体B就是当前这个情况的 fallback。  
+并不是我设定了 font-family: A，页面展示就一定会用 A 字体，因为 A 字体可能不存在该操作系统上，这时，我们的网站就不知道该用什么字体去展示我们的页面的。  
+所以，在字体定义的时候，我们通常都会定义一串字体，利用字体的 fallback 机制，让浏览器找到合适的进行字体展示。  
+以 font-family: Helvetica, Arial; 为例，Arial 字体就是一种 fallback ，当指定的第一选择字体 Helvetica 不可用时，则尝试去寻找 Arial 是否可用  
+系统所包含哪些字体跟什么有关呢？当我们想用一种字体，但不确认这个字体是否是系统已有的，怎么去确认呢？  
+首先系统所包含字体不只和系统预装的字体有关，还和系统上安装哪些软件有关  
+- 微软操作系统下，详细的系统和一些软件包含的字体可以查看这个索引：Microsoft typography
+- Mac 系统可以查看这个索引：List of typefaces included with OS X[
+ 
+## 掌握字体定义顺序
+目前大部分主流网站的字体定义，都接近如下定义方式  
+``` 
+{
+  font-family: 
+    system-ui, -apple-system, BlinkMacSystemFont, segoe ui, Roboto,
+    Helvetica, Arial,
+    sans-serif;
+}
+```
+对于字体定义顺序不太了解的人，可能会疑惑，为什么需要这么多字体？每个字体都有用吗？  
+在解释上面的字体定义顺序之前，还有意思的字体名 -apple-system，BlinkMacSystemFont，segoe ui，Roboto 需要解释一下。  
+**San Francisco Fonts**  
+San Francisco Fonts 又叫旧金山字体，是一款西文字体。随着 iOS 9 更新面世，在 WatchOS 中随 Apple Watch 一起悄然发售，并且还将在 Apple TV 上的新 tvOS 中使用  
+San Francisco Fonts 在 iOS 系统上用于替代升级另外一款西文字体 Helvetica Neue。Apple 做了一些重要的改变，使其成为平台上更好的， 甚至是完美的西文字体  
+**apple-system/BlinkMacSystemFont**  
+- Supported as the -apple-system value (only on macOS and iOS)
+- Supported as the BlinkMacSystemFont value (only on macOS
+
+考虑到不同平台及向后兼容，在 macOS 和 iOS 上，我们需要使用 -apple-system 及 BlinkMacSystemFont 来兼容适配 system-ui 标准
+
+**Segoe UI**  
+Segoe UI 是 Windows 从 Vista 开始的默认西文字体族，只有西文，不支持汉字，属于无衬线体。  
+它也表示一个系列而不是某一款单一字体。使用 font-family: Segoe UI 可以在 Windows 平台及 Windows Phone 上选取最佳的西文字体展示。  
+
+**Roboto**  
+Roboto 是为 Android 操作系统设计的一个无衬线字体家族。Google 描述该字体为“现代的、但平易近人”和“有感情”的。  
+这个字体家族包含Thin、Light、Regular、Medium、Bold、Black六种粗细及相配的斜体。  
+
+## 字体定义顺序详解
+``` 
+{
+  font-family: 
+    system-ui, -apple-system, BlinkMacSystemFont, segoe ui, Roboto,
+    Helvetica, Arial,
+    sans-serif;
+}
+```
+- system-ui，使用各个支持平台上的默认系统字体
+- apple-system， 在一些稍低版本 Mac OS X 和 iOS 上，它针对旧版上的 Neue Helvetica 和 Lucida Grande 字体，升级使用更为合适的 San Francisco Fonts
+- BlinkMacSystemFont，针对一些 Mac OS X 上的 Chrome 浏览器，使用系统默认字体
+- segoe ui，在 Windows 及 Windows Phone 上选取系统默认字体
+- Roboto，面向 Android 和一些新版的的 Chrome OS
+- Helvetica,Arial，在针对不同操作系统不同平台设定采用默认系统字体后，针对一些低版本浏览器的降级方案
+- sans-serif，兜底方案，保证字体风格统一，至少也得是无衬线字体
+
+上述 5 个字体族定义，优先级由高到底，可以看到，它们 5 个都并非某个特定字体，基本的核心思想都是选择对应平台上的默认系统字体。  
+涵盖了 iOS、MAC OS X、Android、Windows、Windows Phone 基本所有用户经常使用的主流操作系统。  
+使用系统默认字体的主要原因是性能。字体通常是网站上加载的最大/最重的资源之一。如果我们可以使用用户机器上已有的字体，我们就完全不需要再去获取字体资源，从而使加载时间明显加快。  
+并且系统字体的优点在于它与当前操作系统使用的相匹配，因此它的文本展示必然也是一个让人舒适展示效果。  
+上述 font-family 的定义不一定是适用所有网站的。它缺少了中文字体的定义。譬如天猫在最前面添加了 "PingFang SC", miui,..必定也有他们的业务上的考虑  
+由于大部分中文字体也是带有英文部分的，但是英文部分又不怎么好看，但是英文字体中大多不包含中文。通常会先进行英文字体的声明，选择最优的英文字体，这样不会影响到中文字体的选择，中文字体声明则紧随其次。  
+
+## 字体定义规则建议
+1. 尽量使用系统默认字体  
+   使用系统默认字体的主要原因是性能，并且系统字体的优点在于它与当前操作系统使用的相匹配，因此它的文本展示必然也是一个让人舒适展示效果
+2. 兼顾中西，西文在前，中文在后  
+   中文或者西文（英文）都要考虑到。由于大部分中文字体也是带有英文部分的，但是英文部分又不怎么好看，但是英文字体中大多不包含中文。通常会先进行英文字体的声明，选择最优的英文字体，这样不会影响到中文字体的选择，中文字体声明则紧随其次
+3. 兼顾多操作系统
+   选择字体的时候要考虑多操作系统。例如 MAC OS 下的很多中文字体在 Windows 都没有预装，为了保证 MAC 用户的体验，在定义中文字体的时候，先定义 MAC 用户的中文字体，再定义 Windows 用户的中文字体；
+4. 兼顾旧操作系统，以字体族系列 serif 和 sans-serif 结尾  
+   当使用一些非常新的字体时，要考虑向下兼容，兼顾到一些极旧的操作系统，使用字体族系列 serif 和 sans-serif 结尾总归是不错的选择，能够保证字体风格统一。
+
+## 字体定义的一些其他细节
+**中文字体的兼容写法**  
+一些中文字体，例如font-family: '宋体'，由于字符编码的问题，少部分浏览器解释这个代码的时候，中文出现乱码，这个时候设定的字体无法正常显示。  
+所以通常会转化成对应的英文写法或者是对应的 unicode 编码，font-family:'宋体' -> font-family: '\5b8b\4f53'  
+\5b8b\4f53 是宋体两个中文字的 unicode 编码表示。类似的写法还有：  
+- 黑体： \9ED1\4F53
+- 微软雅黑：\5FAE\8F6F\96C5\9ED1
+- 华文细黑：\534E\6587\7EC6\9ED1
+- 华文黑体：\534E\6587\9ED1\4F53
+
+**字体定义中的分号**  
+譬如定义字体的时候，何时需要在字体两端添加引号,像这样：  
+``` 
+p{
+    font-family: 'Microsoft YaHei', '黑体-简', '\5b8b\4f53';
+}
+```
+当字体名字中间有空格，中文名字体及 Unicode 字符编码表示的中文字体，为了保证兼容性，都建议在字体两端添加单引号或者双引号
+
+**影响字体渲染的因素**  
+- Web页面的 lang, charset 和浏览器设置都会对默认字体产生影响
+- 不同操作系统、不同浏览器都默认中文、英文字体的设置都有区别
+
+**serif 和 sans-serif 不总是生效**  
+Web页面的 lang, charset 和浏览器设置都会对默认字体产生影响。  
+以 font-family: sans-serif 为例，希望浏览器选择一款非衬线字体展示文字。但是我们可以通过修改浏览器的默认配置来使得 sans-serif 展示一款 serif 字体。  
+
 
 原文:  
 [内有乾坤！大有学问的字体定义原理](https://mp.weixin.qq.com/s/EkFv7W8aX4yzSrFfDPG9IQ)
